test/should_pass/nonempty_cons.erl
-module(nonempty_cons).

-spec t() -> [integer(), ...].
t() ->
    [1].
